add react root and bundled script

--- a/react-idx.html
+++ b/react-idx.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/magic-check.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="bundle.js"></script>
     <title></title>
   </head>
   <body>
-    <h1>working</h1>
+    <div id="root">Root</div>
   </body>
 </html>
